<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/item_rv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:strokeColor="@color/teal_700"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_nama_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_barang"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_harga_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_barang"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_barang" />

        <TextView
            android:id="@+id/tv_jumlah_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_barang"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_harga_barang"
            app:layout_constraintTop_toBottomOf="@id/tv_harga_barang" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>